--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.mail.host=smtp@gmail.com
-spring.mail.username=xxxxxx
-spring.mail.password=xxxxxx
-spring.mail.properties.mail.smtp.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xxx@gmail.com
+spring.mail.password=xxxxxxxxxxx
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.main.allow-bean-definition-overriding=true
 
 discount.value=50
 blackDays=false
