--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
+# email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xxx@gmail.com
-spring.mail.password=xxxxxxxxxxx
+spring.mail.username=atesta657a@gmail.com
+spring.mail.password=test321test
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
@@ -14,8 +15,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-spring.main.allow-bean-definition-overriding=true
 
 discount.value=50
 blackDays=false
