--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,5 +2,19 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
-discount.value=50
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=atesta657a@gmail.com
+spring.mail.password=test321test
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+discount.value=30
 blackDays=false
